--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-numpy==1.19.1
-streamlit==0.73.1
-pandas==1.2.0
-openpyxl==3.0.5
-xlrd==2.0.1
+dropbox==11.0.0
+streamlit==0.75.0
+numpy==1.19.2
+pandas==1.1.3
